--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<h2>Riccardo ZOCCOLAN (riccardo.zoccolan@devinci.fr)</h2>
 		<h2>Mohammad Khosravi (mohammad.khosravi@devinci.fr)</h2>
 		<h2>Explorateur Bitcoin</h1>
+		<h4>la mia banda  suona il rock e tutto al restp all'occorrenza</h4>
 	</body>
 </html>
 		
